fix: added clear button and fixed alignment for buttons

--- a/Calculator/calculator.css
+++ b/Calculator/calculator.css
@@ -42,11 +42,11 @@ button:hover{
 .btn-container {
     margin: 10px;
     display: flex;
-    justify-content: space-between;
+    
 }
 
 .left {
-    width: auto;
+    width: 400px;
     height: 400px;
     gap: 10px;
     display: flex;
@@ -66,8 +66,8 @@ button:hover{
 }
 
 .op {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
 }
 
 
